--- a/companywebsite/static/css/layout.css
+++ b/companywebsite/static/css/layout.css
@@ -3,7 +3,7 @@
   font-family: Arial, Helvetica, sans-serif;
 }
 body {
-  background-color: whitesmoke;
+  background-color: rgb(255, 255, 255);
   color: #17421d;
 }
 .container {
@@ -18,14 +18,14 @@ body {
 .banner {
   display: block;
   width: 100%;
-  height: 250px;
+  height: 180px;
   text-align: center;
   font-size: 60px;
-  background-image: url("/static/img/banner1.jpg");
+  background-image: url("/static/img/log.png");
   background-size: 100% 100%;
   margin: 0px 0px 0px 0px;
   padding-top: 150px;
-  color: #16d1ae;
+  color: #000000;
 }
 
 .menu {
@@ -33,7 +33,7 @@ body {
   width: 100%;
   height: 50px;
   font-size: larger;
-  background-color: #5bb045;
+  background-color: #393939;
   text-align: center;
   padding-top: 15px;
   margin: 0px 0px 0px 0px;
@@ -49,7 +49,7 @@ body {
   display: inline-block;
   margin-left: 10px;
   margin-right: 10px;
-  color: #16d1ae;
+  color: #ffffff;
 }
 
 .menuitem a {
@@ -60,7 +60,7 @@ body {
 .content {
   display: block;
   width: 100%;
-  background-color: #cffffd;
+  background-color: #fefefe;
   min-height: 500px;
   margin: 0px 0px 0px 0px;
   border-width: 1px;
@@ -129,7 +129,7 @@ body {
   display: block;
   width: 100%;
   height: 40px;
-  background-color: #5bb045;
+  background-color: #393939;
   text-align: center;
   padding-top: 10px;
   margin: 0px 0px 0px 0px;
